--- a/coding_assignments/01-input-output.html
+++ b/coding_assignments/01-input-output.html
@@ -37,7 +37,7 @@
 
 
 
-<h2>Textbox</h2>
+<h2>Textbox Input</h2>
 
 <p>Use an <code>input</code> element with <code>type="text"</code> to collect text input. </p>
 
