--- a/html_project/updatedTemplate.html
+++ b/html_project/updatedTemplate.html
@@ -9,9 +9,12 @@
 /* END OF CSS */
 </style>
 <body>
-<!-- PUT YOUR HTML CODE HERE -->
+  <h1>hi i am a header in the wrong place</h1>
 
-<h1>Blank Heading Level 1</h1>
+  <img src="john_mary_judge.jpg">
+  <!-- PUT YOUR HTML CODE HERE -->
+  
+  <h1>Blank Heading Level 1</h1>
 
 
 
