--- a/coding_assignments/01-input-output.html
+++ b/coding_assignments/01-input-output.html
@@ -80,7 +80,14 @@ function onConsoleButtonClick() {
 function onTextInputButtonClick() {
   var name = document.getElementById("textInputId").value;
 
-  document.getElementById("textInputButtonParagraph").innerHTML = `Hello ${name}, it is very nice to meet you!`;
+  writeToPage("textInputButtonParagraph", `Hello ${name}, it is very nice to meet you!`);
+}
+
+// This function accepts two input parameters:
+// elementId is the ID of the page element we want to add content to
+// message is the text we want to put into that
+function writeToPage(elementId, message) {
+  document.getElementById(elementId).innerHTML = message;
 }
 
 </script>
@@ -136,6 +143,7 @@ function onDropdownOptionClick(event) {
 }
 
 </script>
+
 
 
 </body>
