--- a/coding_lessons/01-input-output.html
+++ b/coding_lessons/01-input-output.html
@@ -12,7 +12,7 @@ section {
 <body>
 
 
-<h1>Coding Assignment #1: Input and Output</h1>
+<h1>Coding Lesson #1: Input and Output</h1>
 
 
 <h2>HTML output types</h2>
@@ -51,7 +51,7 @@ function onAlertButtonClick() {
 
 // This function will run when we click on the "Change the HTML contents" button.
 function onAddContentButtonClick() {
-
+  
 }
 
 </script>
@@ -70,7 +70,7 @@ function onAddContentButtonClick() {
 <script>
 
 function onConsoleButtonClick() {
-
+  
 }
 
 </script>
