--- a/coding_lessons/02-KEY-variables-conditionals.html
+++ b/coding_lessons/02-KEY-variables-conditionals.html
@@ -6,7 +6,7 @@
 <body>
 
 
-<h1>Coding Assignment #2: Variables and Conditionals</h1>
+<h1>Coding Lesson #2: Variables and Conditionals</h1>
 
 
 <p id="pokeButton">Poke the bear. <button onclick="pokeBear()">poke</button></p>
