--- a/coding_lessons/03-KEY-loops.html
+++ b/coding_lessons/03-KEY-loops.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Input and Output</title>
+<title>Loops</title>
 </head>
 <body>
 
 
-<h1>Coding Assignment #3: Loops</h1>
+<h1>Coding Lesson #3: Loops</h1>
 
 <button onclick="quizMe()">Quiz Me</button>
 
