--- a/coding_lessons/03-loops.html
+++ b/coding_lessons/03-loops.html
@@ -14,7 +14,9 @@
 <script>
 
 function quizMe() {
-  askQuestion("What is 2+2?", 4);
+  var a = 2;
+  var b = 2;
+  askQuestion(`What is ${a} + ${b}?`, a + b);
 }
 
 function askQuestion(questionText, questionAnswer) {
