Rename parameter for clarity in askQuestion function

--- a/coding_lessons/03-loops.html
+++ b/coding_lessons/03-loops.html
@@ -19,10 +19,10 @@ function quizMe() {
 
 }
 
-function askQuestion(questionText, questionAnswer) {
+function askQuestion(questionText, correctAnswer) {
   var answer = prompt(questionText);
 
-  if (answer == questionAnswer) {
+  if (answer == correctAnswer) {
     alert("Correct!")
   } else {
     alert("Wrong answer, please try again.");
